@@ -1,3 +1,7 @@
+2012-12-11 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/String.h: missing operator +=( const StringProxy& )
+
 2012-12-10  JJ Allaire <jj@rstudio.org>
 
         * R/Attributes.R: warn when depends attribute is not matched with
